--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,11 @@
   margin: 0;
 }
 
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   font-family: var(--body-font);
   /* font-size: var(--normal-font-size); */
